--- a/lista-3/ex1.html
+++ b/lista-3/ex1.html
@@ -6,12 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <ol>
-       <li>Casa ou Apartamento</li>
-       <li>Roupas Novas</li>
-       <li>Celular</li>
-       <li>Video Game</li>
-       <li>Carro</li>
-    </ol>
+    <h1>Miguel do Nascimento Evangelista - Quem sou eu?</h1>
+    <p>Meu nome é Miguel, tenho muito interesse pelas artes e gosto de aprender coisas novas</p>
 </body>
 </html>
