--- a/lista-3/ex1.html
+++ b/lista-3/ex1.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ex1</title>
 </head>
 <body>
-    <h1>Miguel do Nascimento Evangelista - Quem sou eu?</h1>
-    <p>Meu nome é Miguel, tenho muito interesse pelas artes e gosto de aprender coisas novas</p>
+    <h3>João Silva - Quem sou eu?</h3>
+    <hr>
+    <p>Meu nome é João Silva, sou apaixonado por tecnologia e programação. Desde pequeno, sempre tive curiosidade sobre como os sites funcionam, o que me levou a estudar desenvolvimento web. Hoje, meu objetivo é me tornar um desenvolvedor full-stack.</p>
+    <h3>Meus interesses:</h3>
+    <ul>
+        <li>Programação: Adoro aprender novas linguagens e desenvolver pequenos projetos.</li>
+        <li>Jogos: Nos momentos de lazer, gosto de jogar games estratégicos.</li>
+        <li>Música: Sou fã de rock clássico e sempre estou ouvindo novas bandas.</li>
+    </ul>
 </body>
 </html>
