--- a/lista-7/ex2/index.html
+++ b/lista-7/ex2/index.html
@@ -28,22 +28,34 @@ And the land will crack with fear.
 Then, her heart pounding...
 The EARTH will draw her final breath.
 Only then, shining with hope...</p>
-
-        <h3>Three HEROES appear at WORLDS' edge.</h3>
+<br>
+        <h2>Three HEROES appear at WORLDS' edge.</h2>
     </div>
 
     <main class="container">
         <div class="card">
-            <img src="media/kris2.gif" alt="">
-            <h3>A HUMAN,</h3>
+            <img src="media/kris2.gif" alt="kris">
+            <br>
+            <h3>A HUMAN</h3>
+            <br>
+            <h2>KRIS</h2>
+
         </div>
         <div class="card">
-            <img src="media/susie.webp" alt="">
-            <h3>A MONSTER,</h3>
+            <img src="media/susie.webp" alt="susie">
+            <br>
+            <h3>A MONSTER</h3>
+            <br>
+            <h2>SUSIE</h2>
+
         </div>
         <div class="card">
-            <img src="media/ralsei.gif" alt="">
-            <h3>AND a PRINCE FROM THE DARK.</h3>
+            <img src="media/ralsei.gif" alt="ralsei">
+            <br>
+            <h3>AND a PRINCE FROM THE DARK</h3>
+            <br>
+            <h2>RALSEI</h2>
+
         </div>
     </main>
 </body>
