--- a/lista-7/ex2/index.html
+++ b/lista-7/ex2/index.html
@@ -34,7 +34,7 @@ Only then, shining with hope...</p>
 
     <main class="container">
         <div class="card">
-            <img src="media/kris2.gif" alt="kris">
+            <img src="media/kris.gif" alt="kris" class="kris-gif">
             <br>
             <h3>A HUMAN</h3>
             <br>
@@ -42,7 +42,7 @@ Only then, shining with hope...</p>
 
         </div>
         <div class="card">
-            <img src="media/susie.webp" alt="susie">
+            <img src="media/susie.webp" alt="susie" class="susie-gif">
             <br>
             <h3>A MONSTER</h3>
             <br>
@@ -50,7 +50,7 @@ Only then, shining with hope...</p>
 
         </div>
         <div class="card">
-            <img src="media/ralsei.gif" alt="ralsei">
+            <img src="media/ralsei.gif" alt="ralsei" class="ralsei-gif">
             <br>
             <h3>AND a PRINCE FROM THE DARK</h3>
             <br>
