--- a/lista-8/ex1/index.html
+++ b/lista-8/ex1/index.html
@@ -18,16 +18,16 @@
             <div class="card" id="card-destaque">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsum dolorum impedit pariatur eum qui, ut a natus sit exercitationem. Facilis, beatae. Voluptatum molestias quia minus, rerum possimus fuga nisi.</p>
             </div>
-            <div class="card">
+            <div class="card" id="card-1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt, porro pariatur non commodi aliquid error voluptatem repellat reprehenderit natus nulla quidem beatae cum. Quo odio nostrum voluptatem magnam consequuntur?</p>
             </div>
-            <div class="card">
+            <div class="card" id="card-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt, porro pariatur non commodi aliquid error voluptatem repellat reprehenderit natus nulla quidem beatae cum. Quo odio nostrum voluptatem magnam consequuntur?</p>
             </div>
-            <div class="card">
+            <div class="card" id="card-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt, porro pariatur non commodi aliquid error voluptatem repellat reprehenderit natus nulla quidem beatae cum. Quo odio nostrum voluptatem magnam consequuntur?</p>
             </div>
-            <div class="card">
+            <div class="card" id="card-4">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt, porro pariatur non commodi aliquid error voluptatem repellat reprehenderit natus nulla quidem beatae cum. Quo odio nostrum voluptatem magnam consequuntur?</p>
             </div>
         </main>
