--- a/lista-9/index.html
+++ b/lista-9/index.html
@@ -4,10 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <header></header>
-    <aside></aside>
-    <main></main>
+    <header>
+        <div class="menu-esquerdo">
+            <ul>
+                <img src="assets/logo.png" alt="">
+                <li><a href="">SMARTPHONES</a></li>
+                <li><a href="">TABLETS</a></li>
+                <li><a href="">COMPUTADORES</a></li>
+            </ul>
+        </div>
+        <div class="menu-direito">
+            <ul>
+                <ul>
+                    <li><a href="">LOGIN</a></li>
+                    <li><a href="">REGISTRAR</a></li>
+                </ul>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <div class="produto">
+            <img src="assets/img-phone-01.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+        <div class="produto">
+            <img src="assets/img-phone-02.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+        <div class="produto">
+            <img src="assets/img-phone-03.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+        <div class="produto">
+            <img src="assets/img-phone-01.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+        <div class="produto">
+            <img src="assets/img-phone-02.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+        <div class="produto">
+            <img src="assets/img-phone-03.jpg" alt="">
+            <h3>Nome do Produto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis velit iure debitis nostrum vero. Voluptas aperiam nam, libero obcaecati explicabo officiis inventore distinctio neque autem hic? Vel, commodi. Numquam.</p>
+            <button>VER MAIS</button>
+        </div>
+    </main>
+    <aside>
+        <div class="tutoriais">
+            <div class="tutoriais-card">
+                <img src="assets/aside-01.jpg" alt="">
+                <p>Título do tutorial de reparo.</p>
+            </div>
+            <div class="tutoriais-card">
+                <img src="assets/aside-02.jpg" alt="">
+                <p>Título do tutorial de reparo.</p>
+            </div>
+            <div class="tutoriais-card">
+                <img src="assets/aside-03.jpg" alt="">
+                <p>Título do tutorial de reparo.</p>
+            </div>
+            <div class="tutoriais-card">
+                <img src="assets/aside-04.jpg" alt="">
+                <p>Título do tutorial de reparo.</p>
+            </div>
+        </div>
+        <div class="publicidade">
+            <img src="assets/ad-01.jpg" alt="">
+            <img src="assets/ad-02.jpg" alt="">
+        </div>
+    </aside>
 </body>
 </html>
