--- a/lista-9/index.html
+++ b/lista-9/index.html
@@ -25,8 +25,8 @@
             <nav class="menu-direito">
                 <ul>
                     <ul>
-                        <li><a href="">LOGIN</a></li>
-                        <li><a href="">REGISTRAR</a></li>
+                        <li><a href="pages/login.html">LOGIN</a></li>
+                        <li><a href="pages/registro.html">REGISTRAR</a></li>
                     </ul>
                 </ul>
             </nav>
