--- a/lista-9/pages/login.html
+++ b/lista-9/pages/login.html
@@ -48,8 +48,11 @@
                 <label for="">Senha</label>
                 <input type="password" name="" id="" placeholder="senha">
                 <br>
-                <input type="checkbox" name="" id="">
-                <label for="">Lembrar de mim</label>
+                <div class="remember-me">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Lembrar de mim</label>
+                </div>
+                
                 <br>
                 <button>Entrar</button>
                 
